--- a/index.html
+++ b/index.html
@@ -1,36 +1,66 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>No-Install Proxy</title>
     <style>
-        body { font-family: monospace; padding: 20px; background: #222; color: #fff; }
-        input { width: 70%; padding: 10px; border: none; }
-        button { padding: 10px 20px; background: #0f0; border: none; cursor: pointer; font-weight: bold; }
-        #output { background: #000; padding: 20px; margin-top: 20px; white-space: pre-wrap; border: 1px solid #444; }
+        body {
+            font-family: monospace;
+            padding: 20px;
+            background: #222;
+            color: #fff;
+        }
+
+        input {
+            width: 70%;
+            padding: 10px;
+            border: none;
+        }
+
+        button {
+            padding: 10px 20px;
+            background: #0f0;
+            border: none;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        #output {
+            background: #000;
+            padding: 20px;
+            margin-top: 20px;
+            white-space: pre-wrap;
+            border: 1px solid #444;
+        }
     </style>
 </head>
+
 <body>
     <h1>☁️ Web Proxy</h1>
     <input type="text" id="url" placeholder="Enter URL (e.g. https://jsonplaceholder.typicode.com/todos/1)">
     <button onclick="fetchUrl()">GO</button>
     <div id="output">Result will appear here...</div>
+    <iframe id="browserFrame"
+        style="width:100%; height:80vh; border:1px solid #444; margin-top:20px; background:white;"></iframe>
 
     <script>
-        async function fetchUrl() {
-            const url = document.getElementById('url').value;
-            const output = document.getElementById('output');
-            
-            output.innerText = "Fetching...";
-            
-            // We ask OUR backend (/proxy) to fetch the target URL
-            try {
-                const res = await fetch(`https://web-prox.onrender.com/proxy?url=${encodeURIComponent(url)}`);
-                const text = await res.text();
-                output.innerText = text;
-            } catch (e) {
-                output.innerText = "Error: " + e;
+        function fetchUrl() {
+            const urlInput = document.getElementById('url').value;
+            const frame = document.getElementById('browserFrame');
+
+            // Add http if the user forgot it
+            let targetUrl = urlInput;
+            if (!targetUrl.startsWith('http')) {
+                targetUrl = 'https://' + targetUrl;
             }
+
+            // Point the iframe to your Render proxy URL
+            // Replace 'your-app.onrender.com' with your actual Render URL
+            const proxyUrl = `https://web-prox.onrender.com/proxy?url=${encodeURIComponent(targetUrl)}`;
+
+            frame.src = proxyUrl;
         }
     </script>
 </body>
+
 </html>
