--- a/index.html
+++ b/index.html
@@ -3,25 +3,38 @@
 <head>
     <title>Enterprise Proxy</title>
     <style>
-        body, html { margin: 0; padding: 0; height: 100%; background: #000; color: white; overflow: hidden; }
-        .bar { height: 50px; background: #222; display: flex; align-items: center; padding: 0 15px; border-bottom: 2px solid #444; }
-        input { flex: 1; background: #333; color: white; border: 1px solid #555; padding: 8px; margin-right: 10px; border-radius: 4px; }
-        button { background: #e02; color: white; border: none; padding: 8px 20px; border-radius: 4px; cursor: pointer; font-weight: bold; }
-        iframe { width: 100%; height: calc(100% - 50px); border: none; background: white; }
+        body, html { margin: 0; padding: 0; height: 100%; background: #111; color: #ddd; font-family: 'Segoe UI', sans-serif; overflow: hidden; }
+        .bar { height: 60px; background: #202020; display: flex; align-items: center; padding: 0 20px; border-bottom: 1px solid #333; box-shadow: 0 2px 10px rgba(0,0,0,0.5); }
+        .logo { font-weight: 800; font-size: 18px; margin-right: 20px; color: #fff; letter-spacing: 1px; }
+        input { flex: 1; background: #333; color: white; border: 1px solid #444; padding: 12px 15px; border-radius: 6px; outline: none; transition: 0.2s; }
+        input:focus { border-color: #666; background: #444; }
+        button { background: linear-gradient(135deg, #e02, #b00); color: white; border: none; padding: 12px 25px; margin-left: 10px; border-radius: 6px; cursor: pointer; font-weight: bold; transition: transform 0.1s; }
+        button:active { transform: scale(0.96); }
+        iframe { width: 100%; height: calc(100% - 60px); border: none; background: #fff; }
     </style>
 </head>
 <body>
     <div class="bar">
-        <input type="text" id="url" placeholder="https://www.pkmn.gg">
-        <button onclick="go()">GO</button>
+        <div class="logo">ENT. PROXY</div>
+        <input type="text" id="url" placeholder="Search or enter URL (e.g. pkmn.gg)" onkeydown="if(event.key==='Enter') go()">
+        <button onclick="go()">BROWSE</button>
     </div>
-    <iframe id="view"></iframe>
+    <iframe id="view" name="viewFrame"></iframe>
 
     <script>
         function go() {
             let addr = document.getElementById('url').value;
-            if (!addr.startsWith('http')) addr = 'https://' + addr;
-            // Launch the site via the /proxy route
+            if (!addr) return;
+            
+            // Basic logic to guess if it's a URL or a search
+            if (!addr.includes('.') || addr.includes(' ')) {
+                // Treat as search query if no dots or has spaces
+                addr = 'https://www.google.com/search?q=' + encodeURIComponent(addr);
+            } else {
+                if (!addr.startsWith('http')) addr = 'https://' + addr;
+            }
+
+            // Load via proxy
             document.getElementById('view').src = '/proxy?url=' + encodeURIComponent(addr);
         }
     </script>
